document-center/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: document-center-ingress
  namespace: document-center
spec:
spec:
  rules:
  - http:
      paths:
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: backend-api-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-ui-service
            port:
              number: 80
